--- a/server/static/css/intented-lp.css
+++ b/server/static/css/intented-lp.css
@@ -1,6 +1,5 @@
-
 .intented-header {
-    height: 694px;
+    height: 762px;
     background-color: #303b42;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -8,14 +7,20 @@
     -o-background-size: cover;
 }
 
+.intented-header .container {
+    padding-top: 77px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+
 .header-sub-title {
-  font-family:  'PT Serif', serif;
-  font-weight: 600;
-  text-align: center;
-  font-size: 38px;
-  margin-top: 25px;
-  width: 615px;
-  margin: auto;
+    font-family:  'PT Serif', serif;
+    font-weight: 600;
+    text-align: center;
+    font-size: 38px;
+    padding-right: 150px;
+    padding-left: 150px;
+    margin: 25px auto auto auto;
 }
 
 .header-title {
@@ -27,27 +32,37 @@
 }
 
 .body-sub-title {
-  font-family:  'PT Serif', serif;
-  font-weight: 600;
-  text-align: center;
-  font-size: 38px;
-  width: 615px;
-  margin: auto;
+    font-family:  'PT Serif', serif;
+    font-weight: 600;
+    text-align: center;
+    font-size: 38px;
+    line-height: 44px;
+    width: 690px;
+    margin: auto;
+}
+
+.body-sub-title.benefits {
+    margin: 22px auto 98px auto;
+}
+
+.body-sub-title.register {
+    margin: 90px auto 27px auto;
 }
 
 .form-control {
-  width: 360px;
-  margin: 65px auto auto auto;
+    width: 360px;
+    margin: 65px auto auto auto;
 }
 
 .body-explain {
-  text-align: center;
-  font-family: 'PT Sans', sans-serif;
-  font-weight: 400;
-  font-size: 22px;
-  width: 710px;
-  line-height: 26px;
-  margin: 27px auto auto auto;
+    text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 400;
+    font-size: 22px;
+    width: 710px;
+    line-height: 26px;
+    margin: 27px auto auto auto;
+    color: #979a98
 }
 
 .body-title {
@@ -60,94 +75,98 @@
 }
 
 .intented-header .lenguage {
-  margin-left: 5px;
-  font-size: 16px;
-  color: #ffffff;
+    margin-left: 5px;
+    font-size: 16px;
+    color: #ffffff;
 }
 
-.intented-header .col-lg-2 {
-  margin-top: 77px;
-  font-family: 'PT Sans', sans-serif;
-  font-weight: 400;
+.intented-header .choice-lenguage {
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 400;
+    text-align: right;
 }
 
 .header-logo {
-  margin-top: 62px;
-  margin-left: 111px;
-  background: url('http://oshine.brandexponentscr.netdna-cdn.com/oshin/v16/wp-content/uploads/sites/18/2014/12/oshine-v15-logo-white.png') center center no-repeat scroll;
-  width: 150px;
-  height: 35px;
+    background: url('http://oshine.brandexponentscr.netdna-cdn.com/oshin/v16/wp-content/uploads/sites/18/2014/12/oshine-v15-logo-white.png') center center no-repeat scroll;
+    width: 150px;
+    height: 35px;
+}
+
+.img-responsive.img-center {
+  margin: auto auto 36px auto;
+}
+
+.img-responsive.product-img {
+  margin: 58px auto auto auto;
 }
 
 .container .col-sm-4 h4 {
-  font-family: 'PT Sans', sans-serif;
-  font-weight: 400;
-  color: #323b43;
-  margin-top: 41px;
-  text-align: center;
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 400;
+    color: #323b43;
+    text-align: center;
 }
 
 .container .col-sm-4 p {
-  font-family: 'PT Sans', sans-serif;
-  font-weight: 400;
-  color: #59626a;
-  margin-top: 10px;
-  font-size: 18px;
-  text-align: center;
-  line-height: 26px;
+    font-family: 'PT Sans', sans-serif;
+    font-weight: 400;
+    color: #59626a;
+    margin-top: 10px;
+    font-size: 18px;
+    text-align: center;
+    line-height: 26px;
 }
 
 .intented-footer {
-  background-color: #f4f7f9;
+    background-color: #f5f5f5;
 }
 
 .call-to-lead {
-  width: 360px;
-  height: 50px;
-  border-radius: 25px;
-  background: #00b96a;
-  color: #ffffff;
-  display: block;
-  margin: 90px auto 102px auto;
-  font-size: 18px;
+    width: 360px;
+    height: 50px;
+    border-radius: 25px;
+    background: #00b96a;
+    color: #ffffff;
+    display: block;
+    margin: 90px auto 102px auto;
+    font-size: 18px;
+    font-family: 'PT Sans', sans-serif;
 }
 
 .call-to-lead.btn:visited {
-  background: #00b96a;
-  color: #ffffff;
+    background: #00b96a;
+    color: #ffffff;
 }
 
 .call-to-lead.btn:hover {
-  color: #ffffff;
-  background-color: #58626a;
-  border-color: #333;
+    color: #ffffff;
+    background-color: #58626a;
+    border-color: #333;
 }
 
 .send-mail {
-  width: 360px;
-  height: 50px;
-  border-radius: 25px;
-  background: #ffffff;
-  color: #303b42;
-  display: block;
-  margin: 90px auto 102px auto;
-  font-size: 18px;
-  border-color: #333;
+    width: 360px;
+    height: 50px;
+    border-radius: 25px;
+    background: #ffffff;
+    color: #303b42;
+    display: block;
+    margin: 90px auto 102px auto;
+    font-size: 18px;
+    border-color: #333;
 }
 
 .send-mail.btn:visited {
-  background: #ffffff;
-  color: #303b42;
-  border-color: #333;
+    background: #ffffff;
+    color: #303b42;
+    border-color: #333;
 }
 
 .send-mail.btn:hover {
-  color: #303b42;
-  background-color: #ffffff;
-  border-color: #333;
+    color: #303b42;
+    background-color: #ffffff;
+    border-color: #333;
 }
-
-/* Customize the text color and shadow color and to optimize text legibility. */
 
 .tagline {
     text-shadow: 0 0 10px #000;
