--- a/server/static/css/intented-lp.css
+++ b/server/static/css/intented-lp.css
@@ -1,5 +1,4 @@
 .intented-header {
-    height: 762px;
     background-color: #303b42;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -27,6 +26,12 @@
     padding-right: 150px;
     padding-left: 150px;
     margin: 25px auto auto auto;
+}
+
+.header-organize {
+    padding-top: 77px;
+    padding-left: 150px;
+    padding-right: 150px;
 }
 
 .header-title {
@@ -90,12 +95,14 @@
     font-family: 'PT Sans', sans-serif;
     font-weight: 400;
     text-align: right;
+    float: right;
 }
 
 .header-logo {
     background: url('http://oshine.brandexponentscr.netdna-cdn.com/oshin/v16/wp-content/uploads/sites/18/2014/12/oshine-v15-logo-white.png') center center no-repeat scroll;
     width: 150px;
     height: 35px;
+    float: left;
 }
 
 .img-responsive.img-center {
@@ -185,4 +192,41 @@
 
 footer {
     margin: 50px 0;
+}
+
+.group {
+    width: 360px;
+    margin: 65px auto auto auto;
+    position:relative;
+}
+
+input {
+    font-size:18px;
+    padding:10px 10px 10px 5px;
+    display:block;
+    width:360px;
+    border:none;
+    border-bottom:1px solid #999;
+    background-color: #f5f5f5;
+}
+input:focus {
+    outline:none;
+}
+
+label {
+    color:#999;
+    font-size:16px;
+    font-weight:normal;
+    position:absolute;
+    pointer-events:none;
+    left:5px;
+    top:10px;
+    transition:0.2s ease all;
+    -moz-transition:0.2s ease all;
+    -webkit-transition:0.2s ease all;
+}
+
+input:focus ~ label, input:valid ~ label {
+    top:-20px;
+    font-size:12px;
 }
