Referal cycle completed, removed language for now

--- a/server/static/css/intented-lp.css
+++ b/server/static/css/intented-lp.css
@@ -18,6 +18,15 @@
     padding-right: 150px;
 }
 
+.alert-info {
+    margin-bottom: 0px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+}
+
 .header-sub-title {
     font-family:  'PT Serif', serif;
     font-weight: 600;
